<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.auth.WelcomeFragment">

    <ImageView
        android:id="@+id/logo"
        android:alpha="0"
        tools:alpha="1"
        android:layout_width="224dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_greenix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:alpha="0"
        tools:alpha="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_blue"
        android:fontFamily="@font/poppins_bold"
        android:textSize="24sp"
        android:text="@string/welcome_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"/>

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center_horizontal|center"
        android:textColor="@color/half_dark_blue"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="16sp"
        android:text="@string/welcome_sub_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <Button
        android:id="@+id/welcome_btn_login"
        app:backgroundTint="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/dark_blue"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="14sp"
        android:text="@string/login"
        app:strokeColor="@color/dark_blue"
        app:cornerRadius="10dp"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toTopOf="@id/tv_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/half_dark_blue"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"
        android:text="@string/no_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/create_account" />

    <Button
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>