<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ProfileFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_profiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:text="@string/my_profiles"
            android:textColor="@color/white" />

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_avatar"
                android:alpha="0"
                tools:alpha="1"
                app:shapeAppearance="@style/roundedImageViewRounded"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_dummy_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                android:layout_marginBottom="90dp"
                android:layout_marginStart="90dp"
                app:layout_constraintBottom_toBottomOf="@id/img_avatar"
                app:layout_constraintEnd_toEndOf="@id/img_avatar"
                app:layout_constraintStart_toStartOf="@id/img_avatar"
                app:layout_constraintTop_toTopOf="@id/img_avatar"
                android:contentDescription="@string/edit_profile" />

            <TextView
                android:id="@+id/tv_username"
                android:alpha="0"
                tools:alpha="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="18sp"
                android:text="@string/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_avatar" />

            <TextView
                android:id="@+id/tv_email"
                android:alpha="0"
                tools:alpha="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                android:textSize="18sp"
                android:text="@string/emails"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_username" />

            <TextView
                android:id="@+id/tv_personal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="10dp"
                android:paddingTop="5dp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_medium"
                android:textSize="13sp"
                android:text="@string/personal"
                android:background="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_email" />

            <TextView
                android:id="@+id/tv_name"
                android:alpha="0"
                tools:alpha="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:text="@string/name"
                app:layout_constraintBottom_toTopOf="@id/et_name"
                app:layout_constraintStart_toStartOf="@id/et_name" />

            <EditText
                android:id="@+id/et_name"
                android:alpha="0"
                tools:alpha="1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border_normal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:autofillHints="name"
                android:hint="@string/input_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_personal" />

            <TextView
                android:id="@+id/tv_age"
                android:alpha="0"
                tools:alpha="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:text="@string/age"
                app:layout_constraintBottom_toTopOf="@id/et_age"
                app:layout_constraintStart_toStartOf="@id/et_age" />

            <EditText
                android:id="@+id/et_age"
                android:alpha="0"
                tools:alpha="1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border_normal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="35dp"
                android:padding="8dp"
                android:autofillHints="name"
                android:hint="@string/input_age"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_name" />

            <TextView
                android:id="@+id/tv_gender"
                android:alpha="0"
                tools:alpha="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:text="@string/gender"
                app:layout_constraintBottom_toTopOf="@id/radio_group"
                app:layout_constraintStart_toStartOf="@id/radio_group" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:alpha="0"
                tools:alpha="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="35dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_age">

                <RadioButton
                    android:id="@+id/radioButtonMavle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/radio_male" />

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_female" />

            </RadioGroup>

            <TextView
                android:id="@+id/tv_location"
                android:alpha="0"
                tools:alpha="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:text="@string/location"
                app:layout_constraintBottom_toTopOf="@id/et_location"
                app:layout_constraintStart_toStartOf="@id/et_location" />

            <EditText
                android:id="@+id/et_location"
                android:alpha="0"
                tools:alpha="1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border_normal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="35dp"
                android:padding="8dp"
                android:autofillHints="name"
                android:hint="@string/input_location"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radio_group" />

            <Button
                android:id="@+id/btn_submit"
                android:alpha="0"
                tools:alpha="1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="25dp"
                android:textSize="14sp"
                android:text="@string/submit"
                app:layout_constraintTop_toBottomOf="@id/et_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>