<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.register.RegisterFragment">

    <TextView
        android:id="@+id/tv_title"
        android:alpha="0"
        tools:alpha="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:textSize="32sp"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:alpha="0"
        tools:alpha="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@id/et_name"
        app:layout_constraintStart_toStartOf="@id/et_name" />

    <EditText
        android:id="@+id/et_name"
        android:alpha="0"
        tools:alpha="1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/border_normal"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        android:padding="8dp"
        android:autofillHints="name"
        android:hint="@string/input_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_email"
        android:alpha="0"
        tools:alpha="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@id/et_email"
        app:layout_constraintStart_toStartOf="@id/et_email" />

    <com.bangkit2023.capstone.greenix.ui.custom.EmailEditText
        android:id="@+id/et_email"
        android:alpha="0"
        tools:alpha="1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/border_normal"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="40dp"
        android:padding="8dp"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <TextView
        android:id="@+id/tv_password"
        android:alpha="0"
        tools:alpha="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@id/et_password"
        app:layout_constraintStart_toStartOf="@id/et_password" />

    <com.bangkit2023.capstone.greenix.ui.custom.PasswordEditText
        android:id="@+id/et_password"
        android:alpha="0"
        tools:alpha="1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/border_normal"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="40dp"
        android:padding="8dp"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_confirm"
        android:alpha="0"
        tools:alpha="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        android:text="@string/confirm_password"
        app:layout_constraintBottom_toTopOf="@id/et_confirm"
        app:layout_constraintStart_toStartOf="@id/et_confirm" />

    <com.bangkit2023.capstone.greenix.ui.custom.PasswordEditText
        android:id="@+id/et_confirm"
        android:alpha="0"
        tools:alpha="1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/border_normal"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="40dp"
        android:padding="8dp"
        android:hint="@string/input_confirm"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <Button
        android:id="@+id/btn_register"
        android:alpha="0"
        tools:alpha="1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="40dp"
        android:textSize="14sp"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@id/et_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/bottomtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:alpha="0"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        tools:alpha="1">

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/have_account"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_register" />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/login"
            android:textColor="@color/light_green"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_account" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>